--- a/testing.ipynb
+++ b/testing.ipynb
@@ -218,6 +218,66 @@
    "source": [
     "scio.savemat(f\"{sim_dir}/fan.mat\", {\"mask\": mask, \"meas\": meas, \"orig\": orig})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/ondemand28/dsaragih/envs/coded-sensors/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cacti.utils.mask import generate_masks\n",
+    "from cacti.datasets.builder import build_dataset \n",
+    "from cacti.utils.config import Config\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "cfg = Config.fromfile(\"configs/STFormer/stformer_base.py\")\n",
+    "\n",
+    "mask,mask_s = generate_masks(cfg.train_data.mask_path,cfg.train_data.mask_shape)\n",
+    "train_data = build_dataset(cfg.train_data,{\"mask\":mask})\n",
+    "test_data = build_dataset(cfg.test_data,{\"mask\":mask})\n",
+    "\n",
+    "train_data_loader = DataLoader(dataset=train_data, \n",
+    "                                batch_size=cfg.data.samples_per_gpu,\n",
+    "                                shuffle=True,\n",
+    "                                num_workers = cfg.data.workers_per_gpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 4, 128, 128])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape = next(iter(train_data_loader))[0].shape\n",
+    "shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
