larger mask preparation and DAVIS split

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -51,16 +51,17 @@
    ],
    "source": [
     "# Load first_mask.bmp\n",
-    "f_mask = plt.imread(f\"./second_mask.bmp\")\n",
+    "k = 2\n",
+    "f_mask = plt.imread(f\"./trial_coded_exposure_{k}x{k}.bmp\")\n",
     "f_mask = f_mask[:,:,0]\n",
     "f_mask = np.array(f_mask, dtype=np.float32)\n",
-    "f_mask = np.reshape(f_mask, (4, 256, 256))\n",
+    "f_mask = np.reshape(f_mask, (k * k, 256, 256))\n",
     "print(f_mask.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,27 @@
     "to_save = to_save // 255\n",
     "# Integer\n",
     "to_save = np.array(to_save, dtype=np.uint8)\n",
-    "scio.savemat(f\"{masks_dir}/2x2_mask.mat\", {\"mask\": to_save})"
+    "scio.savemat(f\"{masks_dir}/{k}x{k}_mask.mat\", {\"mask\": to_save})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 256, 4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scio.loadmat(f\"{masks_dir}/2x2_mask.mat\")[\"mask\"].shape"
    ]
   },
   {
